contentProvider注册地址搞不清楚

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,5 +46,8 @@
             </intent-filter>
         </activity>
     </application>
+    <provider
+        android:name="TeacherContentProvider"
+        android:authorities="jewelry.apple" />
 
 </manifest>
