:intent的数据传输接口Parcelable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="jewelry.apple" >
 
+    <provider
+        android:name=".TeacherContentProvider"
+        android:authorities="jewelry.apple" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,19 +16,16 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
-
-            <!--
-                <intent-filter>
+<!--            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            -->
+            </intent-filter>-->
         </activity>
         <activity android:name=".Main2Activity" >
 
             <!--
-                <intent-filter>
+                    <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -32,22 +33,43 @@
             -->
         </activity>
         <activity android:name=".Main3Activity" >
-<!--            <intent-filter>
+
+            <!--
+                <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity android:name=".Main5Activity" >
+
+            <!--
+                <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+
+        <activity android:name=".Main6Activity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Main7Activity" >
+        </activity>
+
+        <receiver android:name="jewelry.broadCastReceiver.myReceiver" >
+            <intent-filter>
+                <action android:name="jewelry.apple.intent.custome" />
+            </intent-filter>
+        </receiver>
+
+
     </application>
-    <provider
-        android:name="TeacherContentProvider"
-        android:authorities="jewelry.apple" />
 
 </manifest>
